# ZTP-projekt

./: .dockerignore  .env.example  .pre-commit-config.yaml  README.md  docker-compose.hetzner.yml  docker-compose.yml  pyproject.toml
.githooks/: pre-commit
.github/workflows/: pytest.yml
deploy/hetzner/: Caddyfile
docs/: ARCHITECTURE.md  DATABASE.md  DEPLOYMENT.md  DEPLOYMENT_HETZNER.md
scripts/: install-hooks.sh  pre-commit-test.sh
services/api/: Dockerfile
services/api/gateway/: config.py  main.py
services/api/tests/: conftest.py  test_gateway_api.py  test_mapper.py  test_user_engagement_routes.py  test_user_routes.py
services/common/eventradar_common/: __init__.py  docs_auth.py  event_ids.py  internal_auth.py  production.py  rate_limit.py  security_headers.py  timezone_utils.py
services/common/tests/: test_security.py
services/events-service/: Dockerfile
services/events-service/events_app/: config.py  main.py
services/events-service/tests/: conftest.py  test_aggregator_repository.py  test_custom_provider_timezone.py  test_date_filtering.py  test_date_validation.py  test_eventbrite_client.py  test_eventbrite_mapper.py  test_factory_providers.py  test_internal_api.py  test_mock_repository.py  test_ticketmaster_client.py  test_ticketmaster_mapper.py  test_ticketmaster_segments.py
services/user-service/: Dockerfile  docker-entrypoint.sh
services/user-service/alembic/: env.py
services/user-service/tests/: conftest.py  test_api_routes.py  test_custom_event_api.py  test_custom_event_repository.py  test_custom_event_update_notifications_api.py  (+10 more)
(+70 files in other folders)
